ya casi funciona

--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,12 @@
           },
           "configurations": {
             "production": {
+          "fileReplacements": [
+            {
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/environment.prod.ts"
+            }
+          ],
               "budgets": [
                 {
                   "type": "initial",
@@ -61,6 +67,12 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
+          "fileReplacements": [
+            {
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/environment.prod.ts"
+            }
+          ],
               "buildTarget": "ByteBattleFront:build:production"
             },
             "development": {
@@ -96,3 +108,4 @@
     }
   }
 }
+
