--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,14 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "node_modules/bootstrap/scss/bootstrap.scss",
+              {
+                "input": "node_modules/bootstrap/scss/bootstrap.scss",
+                "inject": true,
+                "bundleName": "bootstrap"
+              },
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.scss"
-            ]    
+            ]
           },
           "configurations": {
             "production": {
@@ -63,13 +67,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "6mb",
+                  "maximumError": "6mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "50kb",
-                  "maximumError": "100kb"
+                  "maximumWarning": "6mb",
+                  "maximumError": "6mb"
                 }
               ],
               "outputPath": "dist/ByteBattleFront",
@@ -119,7 +123,12 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "node_modules/bootstrap/scss/bootstrap.scss",
+              {
+                "input": "node_modules/bootstrap/scss/bootstrap.scss",
+                "inject": true,
+                "bundleName": "bootstrap"
+              },
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.scss"
             ]
           }
